assets/css/style.css
/* ... */
.services-modal .social-icons a:hover {
    color: #007bff;
    transform: scale(1.2) rotate(10deg);
}


#services {
    margin-top: -100px;
    padding-top: 0;
}

.service-header {
    margin-bottom: 60px;

}




/* ========== Projects Section Styles ========== */
.projects-wrapper {
    position: relative;
    display: flex;
    align-items: center;
    top: 30px;
    bottom: 40px;
}

.scrolling-wrapper {
    display: flex;
    white-space: nowrap;
    scroll-behavior: smooth;
    padding: 10px 0;
    flex-grow: 1;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    scroll-padding-left: 10px;
    justify-content: flex-start;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.scrolling-wrapper::-webkit-scrollbar {
    display: none;
}

.scrolling-wrapper::after {
    content: "";
    display: block;
    width: 40px;
    flex-shrink: 0;
}

.project-card {
    position: relative;
    width: 100%;
    max-width: 430px;
    height: 220px;
    margin: 0 10px;
    background-size: cover;
    background-position: center;
    border-radius: 8px;
    cursor: pointer;
    text-align: center;
    transition: transform 0.3s;
    color: white;
    overflow: hidden;
    scroll-snap-align: start;
}

.project-card:hover {
    transform: scale(1.05);
}

.project-card .overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 20px;
}

.project-card h4,
.project-card p {
    z-index: 1;
    margin: 0;
    font-weight: 600;
}

.project-card:hover .overlay {
    background-color: rgba(0, 0, 0, 0.9);
}

.arrow {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 2rem;
    cursor: pointer;
    z-index: 1000;
    color: rgb(7, 6, 6);
}

.left-arrow {
    left: -50px;
}

.right-arrow {
    right: -40px !important;
}

#projects {
    margin-top: -80px !important;
}


/* ========== Modal Styles ========== */
.modal-dialog {
    max-width: 80%;
    margin: 1.75rem auto;
}

.modal-content {
    background-color: #fff;
    color: #333;
    padding: 20px;
    border-radius: 8px;
    max-height: 80vh;
    overflow-y: auto;
    font-weight: 400;
}

.modal-title {
    font-weight: 800;
    font-size: 2rem;
    text-align: left;
}

.modal-header {
    padding-bottom: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.modal-body {
    padding-top: 15px;
    padding-bottom: 15px;
    overflow-y: auto;
    max-height: 70vh;
    font-weight: 400;
    line-height: 1.6;
    text-align: justify;
}

.modal-body .col-4 {
    padding: 10px;
}

.modal-body .row {
    align-items: stretch;
}

.modal-body h6 {
    font-weight: 700;
    font-size: 1.6rem;
    margin-bottom: 15px;
}

.tech-stack h8 {
    font-size: 1.3rem;
    font-weight: 700;
    margin-bottom: 10px;
}

.tech-stack p {
    font-size: 1rem;
    margin-bottom: 12px;
    text-align: justify;
    font-weight: 400;
    line-height: 1.6;
}

.modal-body ul {
    padding-left: 20px;
    margin-bottom: 15px;
}

.modal-body ul li {
    margin-bottom: 8px;
}

.date-section {
    margin-bottom: 15px;
    font-weight: 500;
}

.modal-body {
    overflow-y: auto;
    max-height: 70vh;
}

.modal-body img {
    border-radius: 8px;
    max-width: 100%;
    max-height: 300px;
    margin-bottom: 15px;
}

/* ========== Credentials Section Styles ========== */
.credentials-wrapper {
    position: relative;
    display: flex;
    align-items: center;
}

/* Smooth scroll and hide scrollbars for credentials */
.scrolling-wrapper-cred {
    display: flex;
    white-space: nowrap;
    scroll-behavior: smooth;
    padding: 10px 0;
    flex-grow: 1;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    scroll-padding-left: 10px;
    justify-content: flex-start;
    perspective: 1000px;
    transform-style: preserve-3d;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.scrolling-wrapper-cred::-webkit-scrollbar {
    display: none;
}

/* Default state - no shadow */
.credential-card {
    position: relative;
    width: 100%;
    max-width: 380px;
    height: 200px;
    margin: 0 10px;
    background-size: cover;
    background-position: center;
    border-radius: 8px;
    cursor: pointer;
    text-align: center;
    transition: transform 0.3s, filter 0.3s ease-in-out;
    color: white;
    overflow: hidden;
    scroll-snap-align: start;
    transform: rotateX(15deg);
    filter: none;
}

.credential-card:hover {
    transform: scale(1.05) rotateX(0deg);
    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3)) drop-shadow(0 0 20px rgba(0, 0, 0, 0.5));
    transition: transform 0.3s, filter 0.3s ease-in-out;
}

.credential-card h4 {
    margin: 0;
    font-size: 1.5rem;
    font-weight: 600;
}

#credentials {
    margin-top: -210px;
    /* Adjust this value to move it up further or less */
}

#scroll-container-cred {
    margin-top: -10px !important;
    /* Adjust the value to move it closer to the header */
}



/* ========== Specific Styling for Iungo Card ========== */
.iungo-card {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 70%;
}

/* ========== Specific Styling for Code Institute Card ========== */
.code-card {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 65%;

}

.pl300-card {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 70%;
}


.arrow {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 2rem;
    cursor: pointer;
    z-index: 1000;
    color: rgb(7, 6, 6);
}

.left-arrow {
    left: -50px;
}

.right-arrow {
    right: 0px;
}
/* ... */

